style fixes --- overlapping styles from the photo gallery interfering with the front page

--- a/public/stylesheets/scss/custom.scss
+++ b/public/stylesheets/scss/custom.scss
@@ -459,7 +459,7 @@ div.event{
   top: 0; left: 0;
 }
 .image_reel img {float: left;}
-.paging 
+.paging .gallery
 {
   margin-top:3em;
 }
@@ -471,9 +471,8 @@ div.event{
   left:495px;;
   width:10px;
   height:10px;
+  margin-right:0.5em;
   background-color:rgba(255,255,255,0.5);
-  margin-right: 1em;
-  margin-bottom: 1em;
   text-decoration: none;
   color: #fff;
   border: 1px solid #610000;
@@ -482,6 +481,8 @@ div.event{
   -webkit-border-radius: 3px;
   &.gallery
   {
+    margin-right: 1em;
+    margin-bottom: 1em;
     left:0px;
     width:110px;
     height:110px;
